# GPT-40k

./: Know_no_fear.txt  README.md  gpt-trainning.ipynb  main.py  pyproject.toml
tokenizer/: bpe.py  merges.npy  vocab.npy
