[tool.poetry]
name = "gpt-decoder"
version = "0.1.0"
description = ""
authors = ["Gabriel <gabriel1007@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
regex = "^2024.5.15"
torch = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
